--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <textarea
                     style="background-color:#f2f2f2;
                     position: absolute; 
-                    top: 110px;left: 30px;width: 400px;height: 170px;border: 3px solid #00ade8;"
+                    top: 110px;left: 30px;width: 300px;height: 170px;border: 3px solid #00ade8;"
                     id="dat1"
                     class="w-11/12 md:h-3/4 m-2p-2border-green-600 rounded-1gp-2border self-center justify-center"
                     name="dat1"
@@ -33,7 +33,7 @@
                 <textarea
                     style="background-color:#f2f2f2;
                     position: absolute; 
-                    top: 290px;left: 30px;width: 400px;height: 170px;border: 3px solid #00ade8;"
+                    top: 290px;left: 30px;width: 300px;height: 170px;border: 3px solid #00ade8;"
                     id="dat2"
                     class="w-11/12 md:h-3/4 m-2p-2border-green-600 rounded-1gp-2border self-center justify-center"
                     name="dat2"
@@ -54,8 +54,8 @@
                         display: inline-block;
                         font-size: 16px;
                         position: absolute; 
-                        top: 490px;left: 30px;width: 100px;height: 40px;"
-                        type="submit"onclick="Check()">Submit</button>
+                        top: 490px;left: 30px;width: 90px;height: 40px;"
+                        type="submit"onclick="Check()">Enviar</button>
                     <button
                         style="background-color: #004a85;
                         border: none;
@@ -66,8 +66,8 @@
                         display: inline-block;
                         font-size: 16px;
                         position: absolute; 
-                        top: 490px;left: 140px;width: 80px;height: 40px;"
-                        type="reset">Clear</button>
+                        top: 490px;left: 140px;width: 90px;height: 40px;"
+                        type="reset">Borrar</button>
                     <input type="radio" id="coseno" name="algoritmo" value="Coseno" style="top:600px;left:290px;">
                     <label for="coseno">Coseno</label>
                     <input type="radio" id="jaccard" name="algoritmo" value="Jaccard" style="top:600px;left:290px;">
@@ -86,7 +86,7 @@
                 <p
                     style="background-color:#f2f2f2;
                     position: absolute; 
-                    top: 490px;left: 230px;width: 200px;height: 40px;"
+                    top: 490px;left: 230px;width: 100px;height: 40px;"
                     id="dist"
                     rows="10"
                     cols="30"name="result"
